<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity"
    android:background="@color/main_background"
    android:id="@+id/root_layout">

    <ImageView
        android:id="@+id/map_bg_view"
        android:layout_width="400dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:srcCompat="@drawable/map_bg" />

    <ImageView
        android:id="@+id/map_highlight_view"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:translationY="17.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:srcCompat="@drawable/map_highlight" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/card_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_highlight_view"
        app:layout_constraintBottom_toTopOf="@+id/card_type">

        <com.google.android.material.chip.Chip
            android:id="@+id/fact_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/fact_chip_title" />

        <com.google.android.material.chip.Chip
            android:id="@+id/poi_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/poi_chip_title" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_category"
        app:layout_constraintBottom_toTopOf="@+id/motion_layout"
        android:layout_marginBottom="22dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/history_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/history_chip_title" />

        <com.google.android.material.chip.Chip
            android:id="@+id/nature_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/nature_chip_title" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.motion.widget.MotionLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_highlight_view"
        app:layout_constraintBottom_toTopOf="@id/show_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/activity_map_scene"
        android:id="@+id/motion_layout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView0"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView1"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bg_01"
                android:tag="@string/carousel_img" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_name" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_area" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bg_02"
                android:tag="@string/carousel_img" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_name" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_area" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bg_03"
                android:tag="@string/carousel_img" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_name" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_area" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bg_04"
                android:tag="@string/carousel_img" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Велико Търново"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_name" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="111 000 души"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_area" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bg_05"
                android:tag="@string/carousel_img" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_name" />

            <tgechev.discoverbulgaria.custom.MyTextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:tag="@string/carousel_region_area" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.helper.widget.Carousel
        android:id="@+id/carousel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:carousel_forwardTransition="@+id/forward"
        app:carousel_backwardTransition="@+id/backward"
        app:carousel_previousState="@+id/previous"
        app:carousel_nextState="@+id/next"
        app:carousel_firstView="@+id/cardView2"
        app:carousel_touchUpMode="immediateStop"
        app:carousel_touchUp_dampeningFactor="0.8"
        app:constraint_referenced_ids="cardView0,cardView1,cardView2,cardView3,cardView4" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <Button
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/show_button_bg"
        android:text="@string/show_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motion_layout"
        app:rippleColor="@color/show_button_ripple" />
</androidx.constraintlayout.widget.ConstraintLayout>